BEE 4750 hw1 - Jiaming Yuan

--- a/hw01.ipynb
+++ b/hw01.ipynb
@@ -1039,7 +1039,9 @@
       "source": [
         "## References\n",
         "\n",
-        "List any external references consulted, including classmates."
+        "List any external references consulted, including classmates.\n",
+        "\n",
+        "I talked over problem 4 with Ari Schor and Grace Raab when working on creating the plots and labels"
       ]
     }
   ],
